exports[`comments reducer should handle ADD_COMMENT 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": null,
  "isLoading": false,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle ADD_COMMENT_FAILURE 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": [Error: Error adding comment],
  "isLoading": false,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle ADD_COMMENT_SUCCESS 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [
    Object {
      "EventId": 1,
      "UserId": 1,
      "createdAt": "2016-12-03T12:00:00.000Z",
      "deletedAt": null,
      "id": 1,
      "text": "Lorem ipsum",
      "updatedAt": "2016-12-03T12:00:00.000Z",
      "user": Object {
        "createdAt": "2016-12-01T13:02:38.213Z",
        "email": "181423@edu.p.lodz.pl",
        "id": 1,
        "imageAvatar": null,
        "updatedAt": "2016-12-01T13:02:38.213Z",
        "username": "pioluk",
      },
    },
  ],
  "error": null,
  "isLoading": false,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle FETCH_COMMENTS 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": null,
  "isLoading": true,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle FETCH_COMMENTS_FAILURE 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": [Error: Error fetching comments],
  "isLoading": false,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle FETCH_COMMENTS_SUCCESS 1`] = `
Object {
  "commentCount": 2,
  "comments": Array [
    Object {
      "EventId": 1,
      "User": Object {
        "id": 1,
        "imageAvatar": null,
        "username": "pioluk",
      },
      "UserId": 1,
      "createdAt": "2016-12-03T12:00:00.000Z",
      "deletedAt": null,
      "id": 1,
      "text": "Lorem ipsum",
      "updatedAt": "2016-12-03T12:00:00.000Z",
    },
    Object {
      "EventId": 1,
      "User": Object {
        "id": 1,
        "imageAvatar": null,
        "username": "pioluk",
      },
      "UserId": 1,
      "createdAt": "2016-12-03T12:30:00.000Z",
      "deletedAt": null,
      "id": 2,
      "text": "Dolor Amet",
      "updatedAt": "2016-12-03T12:30:00.000Z",
    },
  ],
  "error": null,
  "isLoading": false,
  "totalCount": 10,
}
`;

exports[`comments reducer should handle REMOVE_COMMENT 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": null,
  "isLoading": false,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle REMOVE_COMMENT_FAILURE 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": [Error: Error removing comment],
  "isLoading": false,
  "totalCount": 0,
}
`;

exports[`comments reducer should handle REMOVE_COMMENT_SUCCESS 1`] = `
Object {
  "comments": Array [
    Object {
      "EventId": 1,
      "UserId": 1,
      "createdAt": "2016-12-03T12:30:00.000Z",
      "deletedAt": null,
      "id": 2,
      "text": "Dolor Amet",
      "updatedAt": "2016-12-03T12:30:00.000Z",
      "user": Object {
        "createdAt": "2016-12-01T13:02:38.213Z",
        "email": "181423@edu.p.lodz.pl",
        "id": 1,
        "imageAvatar": null,
        "updatedAt": "2016-12-01T13:02:38.213Z",
        "username": "pioluk",
      },
    },
  ],
  "error": null,
  "isLoading": false,
}
`;

exports[`comments reducer should return the initial state 1`] = `
Object {
  "commentCount": 0,
  "comments": Array [],
  "error": null,
  "isLoading": false,
  "totalCount": 0,
}
`;
